Version 1.99
-------------
Data tracking improvements

Version 1.98
-------------
Bartender improvements
- More information (storage/wishlist)
- Show used in recipes
- Redesigned component

Version 1.97
-------------
Add detection of POI dataports
Properly handle bad detections

Version 1.96
-------------
Improved data port name detection

Version 1.95
-------------
Added searchbars to wishlists with options for grouping and sorting
Added searchbars to engineers for searching on name, location, specialization or blueprints
Added pre-engineered Heatsink Launcher V1 blueprint
Added wishlist export formats CSV and XLS
Consider fleetcarrier materials as needed in export
Added full inventory export to Settings (CSV and XLS)
Show remaining indicator also to yellow wishlist ingredients on mouse hover
Added tracking of dataports to figure out data spawn locations and droprates per port type

Version 1.94
-------------
Optimization to copy to clipboard functionality for horizons wishlist to reduce url size
Show remaining indicator to red wishlist ingredients on mouse hover
Added tips to unlocking Odyssey Engineers

Version 1.93
-------------
Shortest path
- Pair experimental with modules when possible
- Make remote workshop always appear first in the list
- Sorting blueprint by type(module, experimental), then name
Handle SendText journal entries for wing style point to emote

Version 1.92
-------------
Added link to about section to the official guide: https://youtu.be/8EXOeB074Zw
Added new filter: Not or more than on wishlist
- Shows all the materials you have that are not on a wishlist or exceeding the total required amount of all wishlists
Added wishlist amount on hover
swap ES/FR locales for horizons commodities
Sorted list of trading materials (only sorted on application launch)
Added help tooltips to wishlist tabs
Process modules before experimental effects in shortest path calculation(could reduce number of destinations)