@@ -1,0 +1,20 @@
+package nl.jixxed.eliteodysseymaterials.domain;
+
+import com.fasterxml.jackson.annotation.JsonIgnoreProperties;
+import lombok.AllArgsConstructor;
+import lombok.Getter;
+import lombok.NoArgsConstructor;
+import lombok.Setter;
+
+import java.util.List;
+
+@Getter
+@Setter
+@AllArgsConstructor
+@NoArgsConstructor
+@JsonIgnoreProperties(ignoreUnknown = true)
+public class CoriolisWishlist {
+    private Integer version;
+    private String name;
+    private List<CoriolisWishlistItem> items;
+}
