@@ -2289,3 +2289,5 @@ tab.bartender.used.in,Used in recipes:,Used in recipes:,In Rezepten verwendet:,U
 tab.bartender.total.add.all,Add all,Add all,Füge alle Hinzu,Añadir todo,Tout ajouter,Adicione tudo,Добавить все
 bartender.buy.value,Buy value: {0},Buy value: {0},Wert kaufen: {0},Valor de compra: {0},Valeur d''achat: {0},Valor de compra: {0},Значение покупки: {0}
 bartender.sell.value,Sell value: {0},Sell value: {0},Wert verkaufen: {0},Valor de venta: {0},Valeur de vente: {0},Valor de venda: {0},Продавать значение: {0}
+horizons.wishlist.coriolis,Create on Coriolis,Create on Coriolis,Auf Coriolis erstellen,Crear en Coriolis,Créer sur Coriolis,Crie em Coriolis,Создать на Coriolis
+horizons.wishlist.coriolis.tooltip,Return to the app by going to MATERIALS NEEDED FOR THIS BUILD > SEND TO EDOMH,Return to the app by going to MATERIALS NEEDED FOR THIS BUILD > SEND TO EDOMH,"Kehren Sie zur App zurück, indem Sie zu MATERIALS NEEDED FOR THIS BUILD > SEND TO EDOMH gehen",Regrese a la aplicación yendo a MATERIALS NEEDED FOR THIS BUILD > SEND TO EDOMH,Retour à l''application en allant à MATERIALS NEEDED FOR THIS BUILD > SEND TO EDOMH,Retorne ao aplicativo indo para MATERIALS NEEDED FOR THIS BUILD > SEND TO EDOMH,"Вернитесь в приложение, перейдя в MATERIALS NEEDED FOR THIS BUILD > SEND TO EDOMH"
